# cv-analyser-with-rag

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters_json2yaml.yml
data/: README.md
data/01_raw/: resume_example.json
data/02_intermediate/: resume_example.yaml
docs/source/: conf.py  index.rst
notebooks/: 00-pdf-to-json.ipynb  01-fmg-rag.ipynb  02-fmg-refactor.ipynb  colab-ai-driven-cv-optimisation-with-rag.ipynb  colab-rag.ipynb  kaggle-ai-driven-cv-optimisation-with-rag.ipynb
src/cv_analyser_with_rag/: __init__.py  __main__.py  settings.py
src/cv_analyser_with_rag/datasets/: __init__.py  pdf_dataset.py
src/cv_analyser_with_rag/pipelines/json2yaml/: __init__.py  nodes.py  pipeline.py
tests/pipelines/json2yaml/: test_pipeline.py
